--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
     }
   },
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": "warn",
     "no-console": "off",
     "import/no-extraneous-dependencies": [
       "error",
@@ -36,6 +36,7 @@
     ],
     "import/no-cycle": "off",
     "no-restricted-syntax": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "no-unused-vars": "warn"
   }
 }
