Some refactoring. Ready to start game, and then re-refactor to look nice

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
     "import/no-cycle": "off",
     "no-restricted-syntax": "off",
     "no-param-reassign": "off",
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "no-plusplus": "off",
+    "no-use-before-define": "off"
   }
 }
