--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-template",
-  "description": "Vite Template",
+  "description": "Deal or No Deal",
   "version": "1.0.0",
   "type": "module",
   "keywords": [
